--- a/src/support/env/.env.test
+++ b/src/support/env/.env.test
@@ -1,4 +1,6 @@
-BASEURL = https://yikalite.ergcontrols.net/login
-BROWSER = chromium
+BASEURL = http://108.143.210.179/login
+BROWSER = firefox
 HEAD = true
-TAGS = smoke
+TAGS = @smoke
+USERNAME = ergtester1@gmail.com
+PASSWORD = Start123!
