--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "debug": "cross-env ENV=test PWDEBUG=1 DEBUG=pw:api cucumber-js --config=cucumber.js",
     "pretest": "npx ts-node src/support/report/init.ts",
     "test": "cross-env ENV=test FORCE_COLOR=0 cucumber-js --config=cucumber.js",
+    "test:smoke": "cross-env ENV=test FORCE_COLOR=0 TAGS=@smoke cucumber-js --config=cucumber.js",
     "test:firefox": "cross-env ENV=test BROWSER=firefox FORCE_COLOR=0 cucumber-js --config=config/cucumber.js",
     "posttest": "npx ts-node src/support/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
