--- a/src/support/env/.env.test
+++ b/src/support/env/.env.test
@@ -1,5 +1,5 @@
 BASEURL = http://108.143.210.179/login
-BROWSER = firefox
+BROWSER = chrome
 HEAD = true
 TAGS = @smoke
 USERNAME = ergtester1@gmail.com
