--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pretest": "npx ts-node src/support/report/init.ts",
     "test": "cross-env ENV=test FORCE_COLOR=0 cucumber-js --config=cucumber.js",
     "test:smoke": "cross-env ENV=test FORCE_COLOR=0 TAGS=@smoke cucumber-js --config=cucumber.js",
+    "test:tag": "cross-env ENV=test FORCE_COLOR=0 TAGS=%npm_config_TAGS% cucumber-js --config=cucumber.js",
     "test:firefox": "cross-env ENV=test BROWSER=firefox FORCE_COLOR=0 cucumber-js --config=config/cucumber.js",
     "posttest": "npx ts-node src/support/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
@@ -25,6 +26,8 @@
     "@cucumber/cucumber": "^10.8.0",
     "@playwright/test": "^1.45.3",
     "@zerostep/playwright": "^0.1.5",
+    "allure-commandline": "^2.30.0",
+    "allure-cucumberjs": "^3.0.0-beta.9",
     "typescript": "^5.5.4"
   }
 }
