Brand Feature and Page

--- a/src/support/env/.env.test
+++ b/src/support/env/.env.test
@@ -1,6 +1,6 @@
 BASEURL = http://108.143.210.179/login
-BROWSER = chrome
+BROWSER = firefox
 HEAD = true
-TAGS = @smoke
+TAGS = @ProfilePage
 USERNAME = ergtester1@gmail.com
 PASSWORD = Start123!
