--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "debug": "cross-env ENV=test PWDEBUG=1 DEBUG=pw:api cucumber-js --config=cucumber.js",
     "pretest": "npx ts-node src/support/report/init.ts",
     "test": "cross-env ENV=test FORCE_COLOR=0 cucumber-js --config=cucumber.js",
+    "test:headless": "cross-env ENV=test FORCE_COLOR=0 HEAD=false cucumber-js --config=cucumber.js",
     "test:smoke": "cross-env ENV=test FORCE_COLOR=0 TAGS=@smoke cucumber-js --config=cucumber.js",
     "test:tag": "cross-env ENV=test FORCE_COLOR=0 TAGS=%npm_config_TAGS% cucumber-js --config=cucumber.js",
-    "test:firefox": "cross-env ENV=test BROWSER=firefox FORCE_COLOR=0 cucumber-js --config=config/cucumber.js",
+    "test:firefox": "cross-env ENV=test FORCE_COLOR=0 BROWSER=firefox cucumber-js --config=cucumber.js",
+    "check-env": "cross-env BROWSER=firefox node -e \"console.log(process.env.BROWSER);\"",
     "posttest": "npx ts-node src/support/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
   },
   "dependencies": {
     "@types/node": "^20.14.12",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "multiple-cucumber-html-reporter": "^3.7.0",
@@ -28,6 +29,7 @@
     "@zerostep/playwright": "^0.1.5",
     "allure-commandline": "^2.30.0",
     "allure-cucumberjs": "^3.0.0-beta.9",
+    "cross-env": "^7.0.3",
     "typescript": "^5.5.4"
   }
 }
