--- a/src/support/env/.env.test
+++ b/src/support/env/.env.test
@@ -1,6 +1,6 @@
-BASEURL = http://108.143.210.179/login
+BASEURL = https://yikalite.ergcontrols.net/login
 BROWSER = chrome
-HEAD = true
+HEAD = false
 TAGS = @smoke
 USERNAME = ergtester1@gmail.com
 PASSWORD = Start123!
