Report Page update

--- a/src/support/env/.env.test
+++ b/src/support/env/.env.test
@@ -1,6 +1,6 @@
 BASEURL = https://yikalite.ergcontrols.net/login
 BROWSER = chrome
-HEAD = false
+HEAD = true
 TAGS = @smoke
 USERNAME = ergtester1@gmail.com
 PASSWORD = Start123!
