--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "debug": "cross-env ENV=test PWDEBUG=1 DEBUG=pw:api cucumber-js --config=cucumber.js",
     "pretest": "npx ts-node src/support/report/init.ts",
     "test": "cross-env ENV=test FORCE_COLOR=0 cucumber-js --config=cucumber.js",
-    "test:headless": "cross-env ENV=test FORCE_COLOR=0 HEAD=false cucumber-js --config=cucumber.js",
-    "test:smoke": "cross-env ENV=test FORCE_COLOR=0 TAGS=@smoke cucumber-js --config=cucumber.js",
-    "test:tag": "cross-env ENV=test FORCE_COLOR=0 TAGS=%npm_config_TAGS% cucumber-js --config=cucumber.js",
-    "test:firefox": "cross-env ENV=test FORCE_COLOR=0 BROWSER=firefox cucumber-js --config=cucumber.js",
-    "test:safari": "cross-env ENV=test FORCE_COLOR=0 BROWSER=webkit cucumber-js --config=cucumber.js",
-    "test:browser": "cross-env ENV=test FORCE_COLOR=0 BROWSER=%npm_config_BROWSER% cucumber-js --config=cucumber.js",
+    "test:headless": "cross-env HEAD=false npm run test",
+    "test:smoke": "cross-env TAGS=@smoke npm run test",
+    "test:tag": "cross-env TAGS=%npm_config_TAGS% npm run test",
+    "test:firefox": "cross-env BROWSER=firefox cucumber-js",
+    "test:safari": "cross-env BROWSER=webkit npm run test",
+    "test:browser": "cross-env BROWSER=%npm_config_BROWSER% npm run test",
     "posttest": "npx ts-node src/support/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
   },
