PageManager is deleted.

--- a/src/support/env/.env.test
+++ b/src/support/env/.env.test
@@ -1,4 +1,4 @@
-BASEURL = https://yikalite.ergcontrols.net/login
+BASEURL = http://48.209.43.142/login
 BROWSER = chrome
 HEAD = true
 TAGS = @smoke
