--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "debug": "cross-env ENV=test PWDEBUG=1 DEBUG=pw:api cucumber-js --config=cucumber.js",
     "pretest": "npx ts-node src/support/report/init.ts",
     "test": "cross-env ENV=test FORCE_COLOR=0 cucumber-js --config=cucumber.js || true",
+    "prod": "cross-env ENV=prod FORCE_COLOR=0 cucumber-js --config=cucumber.js || true",
     "test:headless": "cross-env HEAD=false npm run test",
     "test:smoke": "cross-env TAGS=@smoke npm run test",
+    "prod:smoke": "cross-env TAGS=@smoke npm run prod",
     "test:tag": "cross-env TAGS=%npm_config_TAGS% npm run test",
     "posttest": "npx ts-node src/support/report/report.ts",
     "test:failed": "cucumber-js -p rerun @rerun.txt"
