--- a/src/support/env/.env.test
+++ b/src/support/env/.env.test
@@ -4,3 +4,5 @@ HEAD = true
 TAGS = @smoke
 USERNAME = ergtester1@gmail.com
 PASSWORD = Start123!
+APIURL = http://48.209.43.142/api/login
+LOGINPAYLOAD = {"email": "ergtester1@gmail.com", "password": "Start123!"}
